Added some more references

--- a/sprout/gallery.html
+++ b/sprout/gallery.html
@@ -30,7 +30,10 @@
                 <img src="images/imperator_300.jpg" alt="Some image">
             </a>
             <p class="reference">
-                [?, ?]
+                [
+                <a href="http://www.scifi3d.com/details.asp?intGenreID=10&intCatID=8&key=534">2</a>,
+                <a href="http://www.scifi3d.com/details.asp?intGenreID=10&intCatID=8&key=557">3</a>
+                ]
             </p>
         </div>
         
@@ -40,8 +43,8 @@
             </a>
             <p class="reference">
                 [
-                <a href="https://www.blendswap.com/blends/view/75686">2</a>,
-                <a href="https://opengameart.org/content/free-photogrammetric-rock-2">3</a>
+                <a href="https://www.blendswap.com/blends/view/75686">4</a>,
+                <a href="https://opengameart.org/content/free-photogrammetric-rock-2">5</a>
                 ]
             </p>
         </div>
@@ -52,7 +55,7 @@
             </a>
             <p class="reference">
                 [
-                <a href="http://casual-effects.com/data/index.html">4</a>
+                <a href="http://casual-effects.com/data/index.html">6</a>
                 ]
             </p>
         </div>
@@ -72,7 +75,7 @@
             </a>
             <p class="reference">
                 [
-                <a href="https://developer.nvidia.com/orca/amazon-lumberyard-bistro">5</a>
+                <a href="https://developer.nvidia.com/orca/amazon-lumberyard-bistro">7</a>
                 ]
             </p>
         </div>
@@ -83,11 +86,11 @@
             </a>
             <p class="reference">
                 [
-                <a href="http://graphics.stanford.edu/data/3Dscanrep/">6</a>,
-                <a href="http://www.blenderdiplom.com/en/downloads/584-download-cycles-material-test-scene.html">7</a>,
+                <a href="http://graphics.stanford.edu/data/3Dscanrep/">8</a>,
+                <a href="http://www.blenderdiplom.com/en/downloads/584-download-cycles-material-test-scene.html">9</a>,
                 <a href="http://graphics.stanford.edu/data/3Dscanrep/">1</a>,
-                <a href="https://www.turbosquid.com/3d-models/free-candle-3d-model/1082654">8</a>,
-                <a href="http://casual-effects.com/data/index.html">9</a>
+                <a href="https://www.turbosquid.com/3d-models/free-candle-3d-model/1082654">10</a>,
+                <a href="http://casual-effects.com/data/index.html">11</a>
                 ]
             </p>
         </div>
@@ -98,7 +101,7 @@
             </a>
             <p class="reference">
                 [
-                <a href="http://threedscans.com/musee-des-monuments-francais/le-transi-de-rene-de-chalon/">10</a>
+                <a href="http://threedscans.com/musee-des-monuments-francais/le-transi-de-rene-de-chalon/">12</a>
                 ]
             </p>
         </div>
@@ -107,6 +110,8 @@
             <p>References</p>
             <ol>
                 <li><a href="http://graphics.stanford.edu/data/3Dscanrep/">Asian Dragon</a></li>
+                <li><a href="http://www.scifi3d.com/details.asp?intGenreID=10&intCatID=8&key=534">Imperial Star Destroyer - Imperator</a></li>
+                <li><a href="http://www.scifi3d.com/details.asp?intGenreID=10&intCatID=8&key=557">Tie Fighter</a></li>
                 <li><a href="https://www.blendswap.com/blends/view/75686">4060.b Spaceship</a></li>
                 <li><a href="https://opengameart.org/content/free-photogrammetric-rock-2">Photogrammetic Rock</a></li>
                 <li><a href="http://casual-effects.com/data/index.html">San Miguel 2.0</a></li>
