--- a/sprout/gallery.html
+++ b/sprout/gallery.html
@@ -65,7 +65,9 @@
                 <img src="images/aurora_300.jpg" alt="Some image">
             </a>
             <p class="reference">
-                [?]
+                [
+                <a href="https://www.cgtrader.com/free-3d-models/plant/other/fir-tree--6">7</a>
+                ]
             </p>
         </div>
         
@@ -75,7 +77,7 @@
             </a>
             <p class="reference">
                 [
-                <a href="https://developer.nvidia.com/orca/amazon-lumberyard-bistro">7</a>
+                <a href="https://developer.nvidia.com/orca/amazon-lumberyard-bistro">8</a>
                 ]
             </p>
         </div>
@@ -86,11 +88,11 @@
             </a>
             <p class="reference">
                 [
-                <a href="http://graphics.stanford.edu/data/3Dscanrep/">8</a>,
-                <a href="http://www.blenderdiplom.com/en/downloads/584-download-cycles-material-test-scene.html">9</a>,
+                <a href="http://graphics.stanford.edu/data/3Dscanrep/">9</a>,
+                <a href="http://www.blenderdiplom.com/en/downloads/584-download-cycles-material-test-scene.html">10</a>,
                 <a href="http://graphics.stanford.edu/data/3Dscanrep/">1</a>,
-                <a href="https://www.turbosquid.com/3d-models/free-candle-3d-model/1082654">10</a>,
-                <a href="http://casual-effects.com/data/index.html">11</a>
+                <a href="https://www.turbosquid.com/3d-models/free-candle-3d-model/1082654">11</a>,
+                <a href="http://casual-effects.com/data/index.html">12</a>
                 ]
             </p>
         </div>
@@ -101,7 +103,7 @@
             </a>
             <p class="reference">
                 [
-                <a href="http://threedscans.com/musee-des-monuments-francais/le-transi-de-rene-de-chalon/">12</a>
+                <a href="http://threedscans.com/musee-des-monuments-francais/le-transi-de-rene-de-chalon/">13</a>
                 ]
             </p>
         </div>
@@ -115,6 +117,7 @@
                 <li><a href="https://www.blendswap.com/blends/view/75686">4060.b Spaceship</a></li>
                 <li><a href="https://opengameart.org/content/free-photogrammetric-rock-2">Photogrammetic Rock</a></li>
                 <li><a href="http://casual-effects.com/data/index.html">San Miguel 2.0</a></li>
+                <li><a href="https://www.cgtrader.com/free-3d-models/plant/other/fir-tree--6">Fir tree</a></li>
                 <li><a href="https://developer.nvidia.com/orca/amazon-lumberyard-bistro">Amazon Lumberyard Bistro</a></li>
                 <li><a href="http://graphics.stanford.edu/data/3Dscanrep/">Happy Buddha</a></li>
                 <li><a href="http://www.blenderdiplom.com/en/downloads/584-download-cycles-material-test-scene.html">Cycles B.M.P.S</a></li>
