Added photon caustics image

--- a/sprout/gallery.html
+++ b/sprout/gallery.html
@@ -99,6 +99,17 @@
                 </p>
             </div>
 
+            <div class="thumbnail">
+                <a href="images/photon_caustics_1440.jpg">
+                    <img src="images/photon_caustics_360.jpg" alt="Some image">
+                </a>
+                <p>
+                    [
+                    <a href="https://themantissa.net/resources/">Alpine Landscape</a>
+                    ]
+                </p>
+            </div>
+            
         </div>
         
     </body>
