Added disney cloud rendering

--- a/sprout/gallery.html
+++ b/sprout/gallery.html
@@ -109,6 +109,17 @@
                     ]
                 </p>
             </div>
+
+            <div class="thumbnail">
+                <a href="images/disney_cloud_1440.jpg">
+                    <img src="images/disney_cloud_540.jpg" alt="Some image">
+                </a>
+                <p>
+                    [
+                    <a href="https://www.disneyanimation.com/technology/datasets">Disney Cloud</a>
+                    ]
+                </p>
+            </div>
             
         </div>
         
