--- a/sprout/gallery.html
+++ b/sprout/gallery.html
@@ -130,6 +130,9 @@
                     <a href="https://www.disneyanimation.com/technology/datasets">Disney Cloud</a>
                     ]
                 </p>
+                <p>
+                    Quarter resolution data set.
+                </p>
             </div>
             
         </div>
