Updated cloud URL

--- a/sprout/gallery.html
+++ b/sprout/gallery.html
@@ -127,7 +127,7 @@
                 </a>
                 <p>
                     [
-                    <a href="https://www.disneyanimation.com/technology/datasets">Disney Cloud</a>
+                    <a href="https://www.technology.disneyanimation.com/clouds">Disney Cloud</a>
                     ]
                 </p>
                 <p>
