Updated disney cloud rendering

--- a/sprout/gallery.html
+++ b/sprout/gallery.html
@@ -131,7 +131,7 @@
                     ]
                 </p>
                 <p>
-                    Quarter resolution data set.
+                    Half resolution data set.
                 </p>
             </div>
             
