Updated the caustics image

--- a/sprout/gallery.html
+++ b/sprout/gallery.html
@@ -108,8 +108,8 @@
             </div>
 
             <div class="thumbnail">
-                <a href="images/photon_caustics_1440.jpg">
-                    <img src="images/photon_caustics_540.jpg" alt="Some image">
+                <a href="images/caustics_1440.jpg">
+                    <img src="images/caustics_540.jpg" alt="Some image">
                 </a>
                 <p>
                     [
@@ -117,7 +117,7 @@
                     ]
                 </p>
                 <p>
-                    The lighting consists almost entirely out of caustics, which are rendered with photon mapping.
+                    The lighting consists almost entirely out of caustics, which are rendered with light-tracing and photon mapping.
                 </p>
             </div>
 
