Added a rene rendering

--- a/zyg/gallery.html
+++ b/zyg/gallery.html
@@ -28,6 +28,17 @@
             </div>
 
             <div class="thumbnail">
+                <a href="images/rene_1440.jpg">
+                    <img src="images/rene_540.jpg" alt="Some image">
+                </a>
+                <p>
+                    [
+                    <a href="http://threedscans.com/musee-des-monuments-francais/le-transi-de-rene-de-chalon/">Transi de René de Chalon</a>
+                    ]
+                </p>
+            </div>
+            
+            <div class="thumbnail">
                 <a href="images/disney_cloud_1440.jpg">
                     <img src="images/disney_cloud_540.jpg" alt="Some image">
                 </a>
