Added san miguel rendering

--- a/zyg/gallery.html
+++ b/zyg/gallery.html
@@ -17,6 +17,17 @@
             </div>
 
             <div class="thumbnail">
+                <a href="images/san_miguel_1440.jpg">
+                    <img src="images/san_miguel_540.jpg" alt="Some image">
+                </a>
+                <p>
+                    [
+                    <a href="http://casual-effects.com/data/index.html">San Miguel</a>
+                    ]
+                </p>
+            </div>
+            
+            <div class="thumbnail">
                 <a href="images/bistro_night_1080.jpg">
                     <img src="images/bistro_night_540.jpg" alt="Some image">
                 </a>
