Finished new rene rendering

--- a/zyg/gallery.html
+++ b/zyg/gallery.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="thumbnail">
-                <a href="images/rene_1440.jpg">
+                <a href="images/rene_1920.webm">
                     <img src="images/rene_540.jpg" alt="Some image">
                 </a>
                 <p>
