Added dispersion image

--- a/zyg/gallery.html
+++ b/zyg/gallery.html
@@ -59,6 +59,15 @@
                     ]
                 </p>
             </div>
+
+            <div class="thumbnail">
+                <a href="images/dispersion_1440.jpg">
+                    <img src="images/dispersion_540.jpg" alt="Some image">
+                </a>
+                <p>
+                    Dispersion
+                </p>
+            </div>
             
         </div>
         
