Added intel sponza night image

--- a/zyg/gallery.html
+++ b/zyg/gallery.html
@@ -68,6 +68,15 @@
                     Dispersion
                 </p>
             </div>
+
+            <div class="thumbnail">
+                <a href="images/intel_sponza_night_1440.jpg">
+                    <img src="images/intel_sponza_night_540.jpg" alt="Some image">
+                </a>
+                <p>
+                    Dispersion
+                </p>
+            </div>
             
         </div>
         
