Forgot proper label

--- a/zyg/gallery.html
+++ b/zyg/gallery.html
@@ -74,7 +74,9 @@
                     <img src="images/intel_sponza_night_540.jpg" alt="Some image">
                 </a>
                 <p>
-                    Dispersion
+                    [
+                    <a href="https://www.intel.com/content/www/us/en/developer/topic-technology/graphics-research/samples.html">Intel Sponza</a>
+                    ]
                 </p>
             </div>
             
